# validation

./: .gitignore  README.md  pyproject.toml  setup.py  validate_neutron_physics.py  validate_photon_physics.py  validate_photon_production.py
benchmarking/: benchmark.py  plot.py  report.py  results.py
neutron-physics/: model.py  validate.py
photon-physics/: model.py  validate.py
photon-production/: model.py  validate.py
validate_physics/: neutron_physics.py  photon_physics.py  photon_production.py  utils.py
validation/: neutron_physics.py  photon_physics.py  photon_production.py  utils.py
